tests/NormalTests/paczka1/small_fuzzy/72271715.err
Error in line 13: fNUB} S596 234,1
Error in line 6: GqmtMO S596 23,5
Error in line 10: fNUBR S596 47,3
